--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
 </head>
 <body>
     <header>
-        <nav >
+        <nav class="container" >
+            <!-- logo -->
             <figure>
             <img src="./assets/images/logo.png" alt="">
             </figure>
 
             <div class="Search-parent">
                 <input type="text" placeholder="Search" >
+                <!-- search-icon -->
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
 
-            <ul>
+            <ul class="nav-items">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Product</a></li>
                 <li><a href="#">About Us</a></li>
