--- a/index.html
+++ b/index.html
@@ -38,6 +38,28 @@
     </header>
 
     <main>
+        <section class="banner container ">
+            <div class="banner-1 ">
+
+            <h1>Mi LED TV 4A PRO 32</h1>
+
+            <P>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</P>
+
+            <span>$1289</span> <br>
+
+            <button class="panda-batton">BUY NOW    <i class="fa-solid fa-arrow-right"></i></button> 
+            
+            </div>
+
+            <div >
+                <!-- <img width="402px" height= "378px" src="./assets/images/banner-images/tv.png" alt=""> -->
+
+                <img src="./assets/images/banner-images/tv.png" alt="">
+            </div>
+
+
+
+        </section>
 
     </main>
 
