--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda</title>
-    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./assets/images/dd logo.png" type="image/x-icon">
 
     <!-- font awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -20,7 +20,7 @@
         <nav class="container" >
             <!-- logo -->
             <figure>
-            <img src="./assets/images/logo.png" alt="">
+            <img src="./assets/images/banner-images/logo.png" alt="">
             </figure>
 
             <div class="Search-parent">
@@ -95,21 +95,21 @@
 
             <div class="shoe-card-container container">
                 <div class="shoe-card">
-                    <img src="/assets/images/banner-images/xbox.png" alt="">
+                    <img src="./assets/images/banner-images/xbox.png" alt="">
                     <h4>X-Box</h4>
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
                     <span class="card-price">$799</span>
                     <button class=" shoe-batton">BUY NOW    <i class="fa-solid fa-arrow-right"></i></button>
                 </div>
                 <div class="shoe-card">
-                    <img src="/assets/images/banner-images/headphone.png" alt="">
+                    <img src="./assets/images/banner-images/headphone.png" alt="">
                     <h4>Apple Headphone</h4>
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
                     <span class="card-price">$699</span>
                     <button class=" shoe-batton">BUY NOW    <i class="fa-solid fa-arrow-right"></i></button>
                 </div>
                 <div class="shoe-card">
-                    <img src="/assets/images/banner-images/tdv.png" alt="">
+                    <img src="./assets/images/banner-images/tdv.png" alt="">
                     <h4>MSI MP255 24'5</h4>
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
                     <span class="card-price">$1289</span>
