--- a/index.html
+++ b/index.html
@@ -132,21 +132,21 @@
 
             <div class="shoe-card-container container">
                 <div class="shoe-card">
-                    <img src="/assets/images/shoes/shoe-1.png" alt="">
+                    <img src="./assets/images/shoes/shoe-1.png" alt="">
                     <h4>Reebok Dart Men’s Shoes</h4>
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
                     <span class="card-price">$1289</span>
                     <button class=" shoe-batton">BUY NOW    <i class="fa-solid fa-arrow-right"></i></button>
                 </div>
                 <div class="shoe-card">
-                    <img src="/assets/images/shoes/shoe-2.png" alt="">
+                    <img src="./assets/images/shoes/shoe-2.png" alt="">
                     <h4>Reebok Pump</h4>
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
                     <span class="card-price">$799</span>
                     <button class=" shoe-batton">BUY NOW    <i class="fa-solid fa-arrow-right"></i></button>
                 </div>
                 <div class="shoe-card">
-                    <img src="/assets/images/shoes/shoe-3.png" alt="">
+                    <img src="./assets/images/shoes/shoe-3.png" alt="">
                     <h4>Reebok All Terrain</h4>
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
                     <span class="card-price">$699</span>
@@ -165,21 +165,21 @@
 
             <div class="shoe-card-container container">
                 <div class="shoe-card ">
-                    <img src="/assets/images/bags/bag-1.png" alt="">
+                    <img src="./assets/images/bags/bag-1.png" alt="">
                     <h4>Ison Backpack</h4>
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
                     <span class="card-price">$1289</span>
                     <button class=" shoe-batton">BUY NOW    <i class="fa-solid fa-arrow-right"></i></button>
                 </div>
                 <div class="shoe-card">
-                    <img src="/assets/images/bags/bag-2.png" alt="">
+                    <img src="./assets/images/bags/bag-2.png" alt="">
                     <h4>Biaowang Backpack</h4>
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
                     <span class="card-price">$799</span>
                     <button class=" shoe-batton">BUY NOW    <i class="fa-solid fa-arrow-right"></i></button>
                 </div>
                 <div class="shoe-card">
-                    <img src="/assets/images/bags/bag-3.png" alt="">
+                    <img src="./assets/images/bags/bag-3.png" alt="">
                     <h4>Dxyizu WS54 Smart</h4>
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
                     <span class="card-price">$699</span>
